# src/main/resources/static/swagger/bookstore-api.yaml
@@ -7,7 +7,7 @@ info:
     name: SquadName
     email: squadEmailAddress
 servers:
-  - url: http://localhost:8080
+  - url: http://localhost:8081
     description: Local server
   - url: http://bookstoredev.secure.bnppf:8080
     description: dev server
@@ -16,7 +16,7 @@ servers:
 security:
   - BasicAuth: []  # Applying BasicAuth globally to all endpoints
 paths:
-  /api/books:
+  /api/v1/books:
     get:
       summary: Get all books
       description: Returns a list of all books available in the bookstore
